--- a/src/assets/i18n/mn.json
+++ b/src/assets/i18n/mn.json
@@ -1,9 +1,23 @@
 {
     "global": {
+        "edit" : "Edit",
         "orders" : "Orders",
+        "dashboard" : "Dashboard",
         "shipping": "Shipping",
         "track-my-order": "Track my order",
         "terms-and-condition": "Terms & Conditions",
-        "returns-policy": "Returns Policy"
+        "returns-policy": "Returns Policy",
+        "about": "About",
+        "about-title": "About us",
+        "contact": "Contact us",
+        "privacy-notice": "Privacy notice",
+        "subscribe": "Subscribe",
+        "subscribe-message": "Subscribe to our mailing list for exclusive news and offers!"
+    },
+    "account" : {
+        "address-book": "Address book",
+        "personal-details": "Personal details",
+        "change-credentials": "Change crendentials",
+        "sign-out": "Sign out"
     }
 }
