--- a/src/assets/i18n/mn.json
+++ b/src/assets/i18n/mn.json
@@ -35,5 +35,9 @@
         "password": "Password",
         "new-email-address": "New email address",
         "verify-new-email-address": "Verify new email address",
+        "firstname": "First name",
+        "lastname": "Last name",
+        "phone-number": "Phone number",
+        "update-details": "Update details"
     }
 }
