--- a/src/assets/i18n/mn.json
+++ b/src/assets/i18n/mn.json
@@ -29,6 +29,7 @@
         "update-address": "Update address",
         "change-password": "Change password",
         "current-password": "Current password",
+        "reset-password": "Reset password",
         "new-password": "New password",
         "set-password": "Set password",
         "change-email": "Change email address",
@@ -38,6 +39,12 @@
         "firstname": "First name",
         "lastname": "Last name",
         "phone-number": "Phone number",
-        "update-details": "Update details"
+        "update-details": "Update details",
+        "order": "Order",
+        "shipping-address": "Shipping address",
+        "order-code": "Order code",
+        "order-status": "Status",
+        "order-total": "Total",
+        "order-last-updated": "Last updated"
     }
 }
