--- a/src/assets/i18n/mn.json
+++ b/src/assets/i18n/mn.json
@@ -1,110 +1,109 @@
 {
-    "global": {
-        "edit": "Edit",
-        "orders": "Orders",
-        "dashboard": "Dashboard",
-        "shipping": "Shipping",
-        "track-my-order": "Track my order",
-        "terms-and-condition": "Terms & Conditions",
-        "returns-policy": "Returns Policy",
-        "about": "About",
-        "about-title": "About us",
-        "contact": "Contact us",
-        "privacy-notice": "Privacy notice",
-        "subscribe": "Subscribe",
-        "subscribe-message": "Subscribe to our mailing list for exclusive news and offers!",
-        "signin": "Sign in",
-        "full-name": "Full name",
-        "company": "Company",
-        "street-line-1": "Street line 1",
-        "street-line-2": "Street line 2",
-        "city": "City",
-        "province": "Province",
-        "post-code": "Post code",
-        "country": "Country",
-        "okey": "Okey",
-        "order-adjuctments": "Order adjuctments",
-        "total": "Total",
-        "remember-me": "Remember me",
-        "register": "Register",
-        "forgot": "Forgot password",
-        "page-not-found": "Page not found",
-        "change": "Change",
-        "next": "Next",
-        "or": "Or",
-        "account": "Account",
-        "payment": "Payment",
-        "complete": "Complete",
-        "search": "Search...",
-        "filters": "Filters",
-        "result": "Result for ",
-        "load-more": "Load more",
-        "no-result": "No result",
-        "add-to-card": "Add to card",
-        "view-card": "View card",
-        "from": "From",
-        "home": "Home",
-        "card": "Card",
-        "checkout": "Check out",
-        "card-empty": "Card is empty",
-        "share": "Share",
-        "full-screen": "Toggle fullscreen",
-        "close": "Close",
-        "previous": "Previous"
-    },
-    "home": {
-        "hero-title": "platform.sale storefront",
-        "top-sellers": "Top Sellers"
-    },
-    "core": {},
-    "account": {
-        "orders": "Orders",
-        "dashboard": "Dashboard",
-        "address-book": "Address book",
-        "personal-details": "Personal details",
-        "change-credentials": "Change credentials",
-        "sign-out": "Sign-out",
-        "update-address": "Update address",
-        "change-password": "Change password",
-        "current-password": "Current password",
-        "reset-password": "Reset password",
-        "new-password": "New password",
-        "set-password": "Set password",
-        "change-email": "Change email address",
-        "password": "Password",
-        "new-email-address": "New email address",
-        "verify-new-email-address": "Verify new email address",
-        "firstname": "First name",
-        "lastname": "Last name",
-        "email": "Email address",
-        "phone-number": "Phone number",
-        "update-details": "Update details",
-        "order": "Order",
-        "shipping-address": "Shipping address",
-        "order-code": "Order code",
-        "order-status": "Status",
-        "order-total": "Total",
-        "order-last-updated": "Last updated",
-        "register": "Register",
-        "create-account": "Create account",
-        "already-have-account": "Already have account"
-    },
-    "checkout": {
-        "thanks-order": "Thank you for your order!",
-        "placed": "Placed",
-        "expiry": "Expiry",
-        "year": "Year",
-        "month": "Month",
-        "complete-order": "Complete order",
-        "payment-title": "Pay with method",
-        "payment-message": "This is an example payment form. Do not use real card details!",
-        "card-number": "Credit card #",
-        "shipping-address": "Shipping address",
-        "select-address": "Select address",
-        "add-new-address": "Add new address",
-        "customer-details": "Customer details",
-        "send-to-address": "Send to this address",
-        "shipping-method": "Shipping method",
-        "proceed-to-payment": "Proceed to payment"
-    }
+	"account": {
+		"address-book": "Хаяг",
+		"already-have-account": "Бүртгэлтэй бол",
+		"change-credentials": "Нэр нууц үг өөрчлөх",
+		"change-email": "Мэйл хаяг солих",
+		"change-password": "Нууц үг солих",
+		"create-account": "Шинээр бүртгүүлэх",
+		"current-password": "Одоогийн нууц үг",
+		"dashboard": "Удирдлагын хэсэг",
+		"email": "Мэйл хаяг",
+		"firstname": "Нэр",
+		"lastname": "Овог",
+		"new-email-address": "Шинэ мэйл хаяг",
+		"new-password": "Шинэ нууц үг",
+		"order": "Захиалга",
+		"order-code": "Захиалгын дугаар",
+		"order-last-updated": "Сүүлд шинэчилсэн",
+		"order-status": "Төлөв",
+		"order-total": "Нийт",
+		"orders": "Захиалгууд",
+		"password": "Нууц үг",
+		"personal-details": "Хувийн мэдээлэл",
+		"phone-number": "Утасны дугаар",
+		"register": "Бүртгүүлэх",
+		"reset-password": "Нууц үг солих",
+		"set-password": "Нууц үг тохируулах",
+		"shipping-address": "Хүргэлтийн хаяг",
+		"sign-out": "Гарах",
+		"update-address": "Хаяг шинэчлэх",
+		"update-details": "Дэлгэрэнгүй шинэчлэх",
+		"verify-new-email-address": "Шинэ мэйл хаяг баталгаажуулах"
+	},
+	"checkout": {
+		"add-new-address": "Шинэ хаяг нэмэх",
+		"card-number": "Картын дугаар #",
+		"complete-order": "Захиалга батлах",
+		"customer-details": "Хэрэглэгчийн мэдээлэл",
+		"expiry": "Дуусах",
+		"month": "Сар",
+		"payment-message": "Энэ туршилтанд зориулсан төлбөр төлөх цонх учир шинхэнэ картын мэдээлэл ашиглаж болохгүй!",
+		"payment-title": "Төлбөр төлөх",
+		"placed": "Placed",
+		"proceed-to-payment": "Төлбөр төлөх",
+		"select-address": "Хаяг сонгох",
+		"send-to-address": "Энэ хаягруу илгээх",
+		"shipping-address": "Хүргэлтийн хаяг",
+		"shipping-method": "Хүргэлтийн төрөл",
+		"thanks-order": "Захиалга өгсөн таньд баярлалаа!",
+		"year": "Жил"
+	},
+	"global": {
+		"about": "Тухай",
+		"about-title": "Бидний тухай",
+		"account": "Хэрэглэгч",
+		"add-to-card": "Карт нэмэх",
+		"card": "Карт",
+		"card-empty": "Карт нэмээгүй байна",
+		"change": "Өөрчлөх",
+		"checkout": "Төлбөр төлөх",
+		"city": "Хот",
+		"close": "Хаах",
+		"company": "Байгууллага",
+		"complete": "Дуусгах",
+		"contact": "Холбоо барих",
+		"country": "Улс",
+		"dashboard": "Удирдлагын хэсэг",
+		"edit": "Засах",
+		"filters": "Шүүлтүүр",
+		"forgot": "Нууц үг мартсан",
+		"from": "Эхлэх",
+		"full-name": "Бүтэн нэр",
+		"full-screen": "Дэлгэц дүүргэн",
+		"home": "Нүүр",
+		"load-more": "Цааш үзэх",
+		"next": "Дараагийн",
+		"no-result": "Үр дүнгүй",
+		"okey": "Ок",
+		"or": "бас",
+		"order-adjuctments": "Order adjuctments",
+		"orders": "Захиалгууд",
+		"page-not-found": "Хуудас олдсонгүй",
+		"payment": "Төлбөр",
+		"post-code": "Шуудангийн код",
+		"previous": "Өмнөх",
+		"privacy-notice": "Нууцлалын бодлого",
+		"province": "Аймаг",
+		"register": "Бүртгүүлэх",
+		"remember-me": "Намайг сана",
+		"result": "Үр дүн",
+		"returns-policy": "Буцаалтын нөхцөл",
+		"search": "Хайх...",
+		"share": "Хуваалцах",
+		"shipping": "Хүргэлт",
+		"signin": "Нэвтрэх",
+		"street-line-1": "Хаяг 1",
+		"street-line-2": "Хаяг 2",
+		"subscribe": "Захиалах",
+		"subscribe-message": "Subscribe to our mailing list for exclusive news and offers!",
+		"terms-and-condition": "Terms & Conditions",
+		"total": "Нийт",
+		"track-my-order": "Миний захиалгыг хяна",
+		"view-card": "Карт харах"
+	},
+	"home": {
+		"hero-title": "platform.sale storefront",
+		"top-sellers": "Top Sellers"
+	}
 }
