chore: Added sign in and collection menu

--- a/apps/storefront/src/assets/i18n/en.json
+++ b/apps/storefront/src/assets/i18n/en.json
@@ -10,6 +10,7 @@
 		"dashboard": "Dashboard",
 		"email": "Email address",
 		"firstname": "First name",
+		"forgot-password-alert": "An email has been sent to {{ param }} Please check and follow the included instructions.",
 		"lastname": "Last name",
 		"new-email-address": "New email address",
 		"new-password": "New password",
@@ -23,6 +24,7 @@
 		"personal-details": "Personal details",
 		"phone-number": "Phone number",
 		"register": "Register",
+		"register-alert": "An email has been sent to {{ param }} Please check and follow the included instructions.",
 		"reset-password": "Reset password",
 		"set-password": "Set password",
 		"shipping-address": "Shipping address",
@@ -35,6 +37,9 @@
 		"add-new-address": "Add new address",
 		"card-number": "Credit card #",
 		"complete-order": "Complete order",
+		"confirmation-lead": "Та бүртгүүлээд захиалгаа баталгаажуулах болон хянах боломжтой!",
+		"confirmation-send": "Great! Now check your email ({{ param }}) to complete registration.",
+		"continue-guest": "Continue as guest",
 		"customer-details": "Customer details",
 		"expiry": "Expiry",
 		"month": "Month",
@@ -72,6 +77,7 @@
 		"full-name": "Full name",
 		"full-screen": "Toggle fullscreen",
 		"home": "Home",
+		"invalid-credentials": "Invalid credentials. Please try again.",
 		"load-more": "Load more",
 		"next": "Next",
 		"no-result": "No result",
