--- a/apps/storefront/src/assets/i18n/mn.json
+++ b/apps/storefront/src/assets/i18n/mn.json
@@ -10,6 +10,7 @@
 		"dashboard": "Удирдлагын хэсэг",
 		"email": "Мэйл хаяг",
 		"firstname": "Нэр",
+		"forgot-password-alert": "Танай {{ param }} мэйл хаягруу баталгаажуулах мэйл илгээлээ. Мэйл хаягаа шалгана уу.",
 		"lastname": "Овог",
 		"new-email-address": "Шинэ мэйл хаяг",
 		"new-password": "Шинэ нууц үг",
@@ -23,6 +24,7 @@
 		"personal-details": "Хувийн мэдээлэл",
 		"phone-number": "Утасны дугаар",
 		"register": "Бүртгүүлэх",
+		"register-alert": "Мэйл хаягаа шалгана уу. Таны ({{ param }}) мэйлрүү баталгаажуулах холбоос илгээсэн.",
 		"reset-password": "Нууц үг солих",
 		"set-password": "Нууц үг тохируулах",
 		"shipping-address": "Хүргэлтийн хаяг",
@@ -35,6 +37,9 @@
 		"add-new-address": "Шинэ хаяг нэмэх",
 		"card-number": "Картын дугаар #",
 		"complete-order": "Захиалга батлах",
+		"confirmation-lead": "Create an account to enjoy faster checkouts, order tracking, order history and more!",
+		"confirmation-send": "Таны ({{ param }}) мэйл хаягт баталгаажуулах холбоос илгээсэн.",
+		"continue-guest": "Зочиноор үргэлжлүүлэх үү",
 		"customer-details": "Хэрэглэгчийн мэдээлэл",
 		"expiry": "Дуусах",
 		"month": "Сар",
@@ -72,6 +77,7 @@
 		"full-name": "Бүтэн нэр",
 		"full-screen": "Дэлгэц дүүргэн",
 		"home": "Нүүр",
+		"invalid-credentials": "Нэвтрэх нэр нууц үг буруу байна. Дахин оролдоно уу",
 		"load-more": "Цааш үзэх",
 		"next": "Дараагийн",
 		"no-result": "Хайлтанд тохирох өгөгдөл олдсонгүй",
