fix(storefront): Added to card #221

--- a/apps/storefront/src/assets/i18n/en.json
+++ b/apps/storefront/src/assets/i18n/en.json
@@ -59,6 +59,7 @@
 		"about-title": "About us",
 		"account": "Account",
 		"add-to-card": "Add to card",
+		"added-to-card": "Added to cart",
 		"card": "Card",
 		"card-empty": "Card is empty",
 		"change": "Change",
