--- a/apps/storefront/src/assets/i18n/mn.json
+++ b/apps/storefront/src/assets/i18n/mn.json
@@ -59,6 +59,7 @@
 		"about-title": "Бидний тухай",
 		"account": "Хэрэглэгч",
 		"add-to-card": "Сагсанд нэмэх",
+		"added-to-card": "Сагсанд нэмэгдлээ",
 		"card": "Сагс",
 		"card-empty": "Сагс хоосон байна",
 		"change": "Өөрчлөх",
@@ -102,7 +103,7 @@
 		"street-line-1": "Хаяг 1",
 		"street-line-2": "Хаяг 2",
 		"subscribe": "Захиалах",
-		"subscribe-message": "Subscribe to our mailing list for exclusive news and offers!",
+		"subscribe-message": "Та шинэ мэдээлэл цаг алдалгүй авахыг хүсвэл захиалах дарна уу!",
 		"terms-and-condition": "Terms & Conditions",
 		"total": "Нийт",
 		"track-my-order": "Миний захиалгыг хяна",
