--- a/apps/dashboard/public/locales/mn/common.json
+++ b/apps/dashboard/public/locales/mn/common.json
@@ -1,5 +1,5 @@
 {
-  "text-read-more": "Read more",
+  "text-read-more": "Цааш унших",
   "text-less": "Less",
   "text-or": "Or",
   "description": "Track Order",
@@ -7,16 +7,16 @@
   "nav-menu-track-order": "Track Order",
   "nav-menu-offer": "Offers",
   "nav-menu-faq": "FAQ",
-  "nav-menu-contact": "Contact",
+  "nav-menu-contact": "Холбоо барих",
   "user-avatar": "user avatar",
-  "auth-menu-profile": "Contact",
+  "auth-menu-profile": "Холбоо барих",
   "auth-menu-checkout": "Checkout",
-  "auth-menu-my-orders": "My Orders",
-  "auth-menu-logout": "Logout",
-  "join-button": "Join",
+  "auth-menu-my-orders": "Миний захиалгууд",
+  "auth-menu-logout": "Гарах",
+  "join-button": "Бүртгүүлэх",
   "change-locale": "Switch to german",
-  "admin-login-title": "Login to admin",
-  "admin-register-title": "Register new account",
+  "admin-login-title": "Админ эрхээр нэвтрэх",
+  "admin-register-title": "Шинээр бүртгүүлэх",
   "billing-address": "Billing Address",
   "shipping-address": "Shipping Address",
   "no-order-found": "No Order Found",
@@ -43,31 +43,31 @@
   "attribute-values": "Attribute Values",
   "pixel": "Pixel",
   "text-loading": "Loading...",
-  "sidebar-nav-item-dashboard": "Dashboard",
-  "sidebar-nav-item-products": "Products",
+  "sidebar-nav-item-dashboard": "Удирдлагийн хэсэг",
+  "sidebar-nav-item-products": "Бүтээгдэхүүн",
   "sidebar-nav-item-attributes": "Attributes",
   "sidebar-nav-item-attribute-value": "Attribute Values",
-  "sidebar-nav-item-groups": "Brands",
+  "sidebar-nav-item-groups": "Groups",
   "sidebar-nav-item-categories": "Categories",
   "sidebar-nav-item-orders": "Orders",
   "sidebar-nav-item-order-status": "Order Status",
-  "sidebar-nav-item-users": "Users",
-  "sidebar-nav-item-coupons": "Coupons",
-  "sidebar-nav-item-taxes": "Taxes",
-  "sidebar-nav-item-shippings": "Shippings",
-  "sidebar-nav-item-settings": "Settings",
-  "sidebar-nav-item-shops": "Shops",
-  "sidebar-nav-item-my-shops": "My Shops",
+  "sidebar-nav-item-users": "Хэрэглэгч",
+  "sidebar-nav-item-coupons": "Купон",
+  "sidebar-nav-item-taxes": "Татвар",
+  "sidebar-nav-item-shippings": "Хүргэлт",
+  "sidebar-nav-item-settings": "Тохиргоо",
+  "sidebar-nav-item-shops": "Дэлгүүрүүд",
+  "sidebar-nav-item-my-shops": "Миний дэлгүүрүүд",
   "sidebar-nav-item-my-shops-dashboard": "Shops Dashboard",
-  "sidebar-nav-item-tags": "Tags",
+  "sidebar-nav-item-tags": "Шошго",
   "sidebar-nav-item-withdraws": "Withdraws",
-  "navbar-add-products": "Add Products",
-  "authorized-nav-item-settings": "Settings",
-  "authorized-nav-item-profile": "Profile",
-  "authorized-nav-item-logout": "Logout",
-  "text-delete": "Delete",
-  "text-edit": "Edit",
-  "text-view": "View",
+  "navbar-add-products": "Бүтээгдэхүүн нэмэх",
+  "authorized-nav-item-settings": "Тохиргоо",
+  "authorized-nav-item-profile": "Хувийн мэдээлэл",
+  "authorized-nav-item-logout": "Гарах",
+  "text-delete": "Устгах",
+  "text-edit": "Засах",
+  "text-view": "Харах",
   "text-ban-user": "Ban User",
   "text-activate-user": "Activate User",
   "update-success": "Successfully updated!",
@@ -147,6 +147,25 @@
   "password-changed-successfully": "Successfully changed your password!",
   "successfully-updated": "Successfully updated!",
   "successfully-created": "Successfully created!",
+  "MARVEL_ERROR.NOT_FOUND": "Not Found",
+  "MARVEL_ERROR.NOT_AUTHORIZED": "Not Authorized",
+  "MARVEL_ERROR.INVALID_CREDENTIALS": "Invalid Credentials",
+  "MARVEL_ERROR.SOMETHING_WENT_WRONG": "Something went wrong",
+  "MARVEL_ERROR.PAYMENT_FAILED": "Payment Failed",
+  "MARVEL_ERROR.OPERATION_NOT": "Operation Not",
+  "MARVEL_ERROR.INSUFFICIENT_BALANCE": "Insufficient Balance",
+  "MARVEL_ERROR.WITHDRAW_MUST_BE_ATTACHED_TO_SHOP": "Withdraw must be attached to shop",
+  "MARVEL_ERROR.PLEASE_LOGIN_USING_FACEBOOK_OR_GOOGLE": "Please login using Facebook or Google",
+  "MARVEL_ERROR.ACTION_NOT_VALID": "Action not valid",
+  "MARVEL_ERROR.SHOP_NOT_APPROVED": "Shop not approved",
+  "MARVEL_MESSAGE.NOT_FOUND": "Not Found",
+  "MARVEL_MESSAGE.CHECK_INBOX_FOR_PASSWORD_RESET_EMAIL": "Check inbox for password reset email",
+  "MARVEL_MESSAGE.SOMETHING_WENT_WRONG": "Something went wrong",
+  "MARVEL_MESSAGE.TOKEN_IS_VALID": "Token is valid",
+  "MARVEL_MESSAGE.INVALID_TOKEN": "Token is not valid",
+  "MARVEL_MESSAGE.PASSWORD_RESET_SUCCESSFUL": "Password reset successful",
+  "MARVEL_MESSAGE.INVALID_CREDENTIALS": "Provided credentials is not valid",
+  "MARVEL_MESSAGE.EMAIL_SENT_SUCCESSFUL": "Email successfully sent",
   "text-access-denied": "Access Denied",
   "text-access-denied-message": "You don't have the permission to access this page.",
   "text-return-home": "Return to home",
@@ -158,17 +177,17 @@
   "text-shop-approve-description": "Are you sure?",
   "text-approve-shop": "Approve Shop",
   "text-disapprove-shop": "Disapprove Shop",
-  "filter-by-group": "Filter By Brand",
-  "filter-by-group-placeholder": "Filter by Brand",
+  "filter-by-group": "Filter By Group",
+  "filter-by-group-placeholder": "Filter by Group",
   "filter-by-category": "Filter By Category",
   "filter-by-category-placeholder": "Filter by Category",
   "filter-by-order": "Order By",
   "filter-by-order-placeholder": "Order By",
   "text-filter": "Filter",
   "text-download": "Download",
-  "text-invoice": "Invoice",
   "text-map-cant-load": "Map cannot be loaded right now, sorry.",
   "text-banner": "Banner",
+
   "text-export-import": "Export/Import",
   "text-export-products": "Export Products",
   "text-export-product-variations": "Export Product Variations",
@@ -179,25 +198,5 @@
   "attribute-imported-successfully": "Attributes Imported Successfully",
   "product-imported-successfully": "Products Imported Successfully",
   "variation-options-imported-successfully": "Variation Options Imported Successfully",
-  "CHAWKBAZAR_ERROR.WRONG_CSV": "You have uploaded wrong csv file!",
-  "CHAWKBAZAR_ERROR.NOT_FOUND": "Not Found",
-  "CHAWKBAZAR_ERROR.NOT_AUTHORIZED": "Not Authorized",
-  "CHAWKBAZAR_ERROR.INVALID_CREDENTIALS": "Invalid Credentials",
-  "CHAWKBAZAR_ERROR.SOMETHING_WENT_WRONG": "Something went wrong",
-  "CHAWKBAZAR_ERROR.PAYMENT_FAILED": "Payment Failed",
-  "CHAWKBAZAR_ERROR.OPERATION_NOT": "Operation Not",
-  "CHAWKBAZAR_ERROR.INSUFFICIENT_BALANCE": "Insufficient Balance",
-  "CHAWKBAZAR_ERROR.WITHDRAW_MUST_BE_ATTACHED_TO_SHOP": "Withdraw must be attached to shop",
-  "CHAWKBAZAR_ERROR.PLEASE_LOGIN_USING_FACEBOOK_OR_GOOGLE": "Please login using Facebook or Google",
-  "CHAWKBAZAR_ERROR.ACTION_NOT_VALID": "Action not valid",
-  "CHAWKBAZAR_ERROR.SHOP_NOT_APPROVED": "Shop not approved",
-  "CHAWKBAZAR_MESSAGE.NOT_FOUND": "Not Found",
-  "CHAWKBAZAR_MESSAGE.CHECK_INBOX_FOR_PASSWORD_RESET_EMAIL": "Check inbox for password reset email",
-  "CHAWKBAZAR_MESSAGE.SOMETHING_WENT_WRONG": "Something went wrong",
-  "CHAWKBAZAR_MESSAGE.TOKEN_IS_VALID": "Token is valid",
-  "CHAWKBAZAR_MESSAGE.INVALID_TOKEN": "Token is not valid",
-  "CHAWKBAZAR_MESSAGE.PASSWORD_RESET_SUCCESSFUL": "Password reset successful",
-  "CHAWKBAZAR_MESSAGE.INVALID_CREDENTIALS": "Invalid Password",
-  "CHAWKBAZAR_MESSAGE.EMAIL_SENT_SUCCESSFUL": "Email successfully sent",
-  "CHAWKBAZAR_MESSAGE.OLD_PASSWORD_INCORRECT": "Provided old password is not valid"
+  "MARVEL_ERROR.WRONG_CSV": "You have uploaded wrong csv file!"
 }
