--- a/apps/dashboard/public/locales/mn/form.json
+++ b/apps/dashboard/public/locales/mn/form.json
@@ -2,8 +2,7 @@
   "form-title-permission": "Permission",
   "form-title-create-product": "Create New Product",
   "form-title-edit-product": "Edit Product",
-  "form-title-edit-shop": "Edit Shop",
-  "form-title-create-type": "Create New Brand",
+  "form-title-create-type": "Create New Group",
   "form-title-product-type": "Product Type",
   "form-description-product-type": "Select product type form here",
   "form-title-simple-product-info": "Simple Product Information",
@@ -15,7 +14,7 @@
   "form-title-options": "Options",
   "form-title-variation-added": "Variations Added",
   "form-title-variant": "Variant",
-  "form-title-edit-type": "Edit Brand",
+  "form-title-edit-type": "Edit Type",
   "form-title-create-category": "Create New Category",
   "form-title-edit-category": "Edit Category",
   "form-title-create-order-status": "Create Order Status",
@@ -36,7 +35,7 @@
   "featured-image-help-text": "Upload your product featured image here",
   "gallery-title": "Gallery",
   "gallery-help-text": "Upload your product image gallery here",
-  "type-and-category": "Brand & Categories",
+  "type-and-category": "Group & Categories",
   "type-and-category-help-text": "Select product group and categories from here",
   "item-description": "Description",
   "item-description-update": "Update",
@@ -78,7 +77,7 @@
   "input-label-draft": "Draft",
   "input-label-select-icon": "Select Icon",
   "input-label-details": "Details",
-  "input-label-group": "Brand",
+  "input-label-group": "Group",
   "input-label-type": "Type",
   "input-label-types": "Types",
   "input-label-parent-category": "Parent Category",
@@ -128,10 +127,10 @@
   "button-label-order-status": "Order Status",
   "button-label-add-type": "Add Type",
   "button-label-add-types": "Add Types",
-  "button-label-add-group": "Add Brand",
+  "button-label-add-group": "Add Group",
   "button-label-add-categories": "Add Categories",
   "button-label-add-order-status": "Add Order Status",
-  "button-label-update-group": "Update Brand",
+  "button-label-update-group": "Update Group",
   "group-description-help-text": "your group description and necessary information from here",
   "button-label-add-category": "Add Category",
   "button-label-update-category": "Update Category",
@@ -216,9 +215,6 @@
   "form-title-create-staff": "Create Staff",
   "form-description-staff-info": "Add your staff information and create a new staff from here",
   "link-register-shop-owner": "Register as Shop Owner",
-  "link-login": "Login",
-  "text-back-to": "Back to",
-  "remember-password": "",
   "button-label-submit": "Submit",
   "error-token-required": "Token is Required!",
   "error-old-password-required": "Old Password is Required!",
@@ -273,9 +269,8 @@
   "shop-settings": "Shop Settings",
   "shop-settings-helper-text": "Add your shop settings information from here",
   "button-label-add-social": "Add New Social Profile",
-  "input-label-select-platform": "Select Social Platform",
-  "input-label-social-url": "Add Profile Url",
-  "input-label-social": "Add Label",
+  "input-label-select-platform": "Select social platform",
+  "input-label-social-url": "Add profile url",
   "placeholder-search-location": "Search location form here",
   "banner-slider-help-text": "Add your banner image with title and description from here. Dimension of the banner should be 1920 x 1080 px for full screen banner and 1500 x 450 px for small banner",
   "input-title": "Title",
@@ -298,22 +293,5 @@
   "promotional-slider-help-text": "Upload Promotional Sliders",
   "error-product-card-required": "Please select a product card",
   "group-settings": "Select group related settings",
-  "group-settings-help-text": "Please make sure you selected the necessary settings",
-  "input-label-add-wallet-points": "Add wallet points",
-  "input-label-wallet-currency-ratio": "Wallet currency ratio",
-  "input-label-signup-points": "Sign up points",
-  "error-min-one-image": "Upload minimum one image",
-  "text-brand-images": "Brand Images",
-  "brand-image-help-text": "Add your brand images for different layout",
-  "button-label-add-brand-images": "Add Image",
-  "button-label-add-brand-layout": "Add New Brand Layout",
-  "input-label-select-layout": "Select Layout Type",
-  "add-at-least-one-image": "Upload at least one image",
-  "text-select-layout": "Select the layout",
-  "error-value-required": "Value is required",
-  "input-label-value-star": "Value*",
-  "type-description-help-text": "Update your brand description and necessary information from here",
-  "form-title-edit-tags": "Edit Tags",
-  "input-label-banner-image": "Banner Image",
-  "category-banner-image-helper-text": "Upload your category banner image"
+  "group-settings-help-text": "Please make sure you selected the necessary settings"
 }
