--- a/apps/storefront/public/locales/en/new.json
+++ b/apps/storefront/public/locales/en/new.json
@@ -1,17 +1,17 @@
 {
-  "text-no-featured-products-found": "No featured products found!",
-  "text-no-flash-products-found": "No flash products found!",
-  "text-no-on-selling-products-found": "No on selling products found!",
-  "text-no-best-selling-products-found": "No best selling products found!",
-  "text-add": "Add",
-  "text-type": "Type",
-  "text-account-address": "Address",
-  "text-billing": "Billing",
-  "text-title": "Title",
-  "text-country": "Country",
-  "text-city": "City",
-  "text-state": "State",
-  "text-zip": "ZIP",
-  "text-street-address": "Street Address",
-  "text-save": "Save"
+	"text-account-address": "Address",
+	"text-add": "Add",
+	"text-billing": "Billing",
+	"text-city": "City",
+	"text-country": "Country",
+	"text-no-best-selling-products-found": "No best selling products found!",
+	"text-no-featured-products-found": "No featured products found!",
+	"text-no-flash-products-found": "No flash products found!",
+	"text-no-on-selling-products-found": "No on selling products found!",
+	"text-save": "Save",
+	"text-state": "State",
+	"text-street-address": "Street Address",
+	"text-title": "Title",
+	"text-type": "Type",
+	"text-zip": "ZIP"
 }
