--- a/apps/storefront/public/locales/mn/common.json
+++ b/apps/storefront/public/locales/mn/common.json
@@ -23,16 +23,16 @@
 	"CHAWKBAZAR_MESSAGE.PASSWORD_RESET_SUCCESSFUL": "Password reset successful",
 	"CHAWKBAZAR_MESSAGE.SOMETHING_WENT_WRONG": "Something went wrong",
 	"CHAWKBAZAR_MESSAGE.TOKEN_IS_VALID": "Token is valid",
-	"add-to-cart": "Added to the cart",
+	"add-to-cart": "Сагсанд нэмсэн",
 	"app-heading": "The ChawkBazar App",
 	"app-sub-heading": "<span> Share Your <strong>Ideas</strong> &amp; Shop Endless <strong>Inspiration</strong> </span>",
-	"breadcrumb-collection": "Collection",
-	"breadcrumb-home": "Home",
-	"breadcrumb-products": "Products",
-	"breadcrumb-search": "Search",
+	"breadcrumb-collection": "Цуглуулга",
+	"breadcrumb-home": "Нүүр",
+	"breadcrumb-products": "Эвэнтүүд",
+	"breadcrumb-search": "Хайх",
 	"button-app-store": "App Store",
-	"button-cancel": "Cancel",
-	"button-chat-services": "Chat With Member Services",
+	"button-cancel": "Цуцлах",
+	"button-chat-services": "Гишүүн үйлчилгээнүүдтэй чатлах",
 	"button-delete": "Delete",
 	"button-go-home": "Go Home",
 	"button-load-more": "Load More",
@@ -217,12 +217,12 @@
 	"text-otp-send-failed": "OTP Code send failed",
 	"text-otp-verify-failed": "Otp verification failed",
 	"text-page-checkout": "Checkout",
-	"text-page-contact-us": "Contact Us",
+	"text-page-contact-us": "Холбоо барих",
 	"text-page-explore": "explore",
 	"text-page-faq": "Frequently Asked Questions",
 	"text-page-header": "Page Heading",
 	"text-page-my-account": "My Account",
-	"text-page-order": "Order",
+	"text-page-order": "Захиалга",
 	"text-page-privacy-policy": "Privacy Policy",
 	"text-page-terms-of-service": "Terms of Service",
 	"text-pay-cash": "Pay with cash upon delivery.",
