--- a/apps/storefront/public/locales/mn/menu.json
+++ b/apps/storefront/public/locales/mn/menu.json
@@ -11,12 +11,12 @@
 	"menu-casual-shirts": "Casual Shirts",
 	"menu-casual-shoes": "Casual Shoes",
 	"menu-casual-wear": "Casual Wear",
-	"menu-category": "Category",
+	"menu-category": "Ангилал",
 	"menu-checkout": "Checkout",
 	"menu-classic": "Classic",
 	"menu-clothing": "Clothing",
 	"menu-collection": "Collection",
-	"menu-contact-us": "Contact Us",
+	"menu-contact-us": "Холбоо барих",
 	"menu-demos": "Demos",
 	"menu-dresses": "Dresses",
 	"menu-elegant": "Elegant",
@@ -26,7 +26,7 @@
 	"menu-fine-jewellers": "Fine Jewellers",
 	"menu-flats": "Flats",
 	"menu-footwear": "Footwear",
-	"menu-forget-password": "Forget Password",
+	"menu-forget-password": "Нууц үг сэргээх",
 	"menu-formal-shirts": "Formal Shirts",
 	"menu-gadgets": "Gadgets",
 	"menu-handbags-wallets": "Handbags & Wallets",
@@ -41,19 +41,19 @@
 	"menu-men-wear": "Men Wear",
 	"menu-minimal": "Minimal",
 	"menu-modern": "Modern",
-	"menu-my-account": "My Account",
-	"menu-order": "Order",
-	"menu-pages": "Pages",
+	"menu-my-account": "Хэрэглэгч",
+	"menu-order": "Захиалга",
+	"menu-pages": "Хуудаснууд",
 	"menu-plus-size": "Plus Size",
 	"menu-premium-beauty": "Premium Beauty",
 	"menu-privacy-policy": "Privacy Policy",
 	"menu-refined": "Refined",
-	"menu-search": "Search",
+	"menu-search": "Хайх",
 	"menu-shops": "Shops",
 	"menu-shorts-skirts": "Shorts & Skirts",
 	"menu-shurgs": "Shurgs",
-	"menu-sign-in": "Sign In",
-	"menu-sign-up": "Sign Up",
+	"menu-sign-in": "Нэвтрэх",
+	"menu-sign-up": "Бүртгүүлэх",
 	"menu-skincare": "Skincare",
 	"menu-sleepwear": "Sleepwear",
 	"menu-smart-wearables": "Smart Wearables",
@@ -67,7 +67,7 @@
 	"menu-top-wear": "Top Wear",
 	"menu-tops-shirts": "Tops, T-Shirts & Shirts",
 	"menu-trendy": "Trendy",
-	"menu-users": "Users",
+	"menu-users": "Хэрэглэгчид",
 	"menu-vintage": "Vintage",
 	"menu-watches-wearables": "Watches & Wearables",
 	"menu-western-wear": "Western Wear",
