--- a/apps/storefront/public/locales/mn/common.json
+++ b/apps/storefront/public/locales/mn/common.json
@@ -1,10 +1,10 @@
 {
-	"CHAWKBAZAR_ERROR.ACTION_NOT_VALID": "Action not valid",
-	"CHAWKBAZAR_ERROR.EMPTY_MOBILE_NUMBER": "Please provide a mobile number",
-	"CHAWKBAZAR_ERROR.INSUFFICIENT_BALANCE": "Insufficient Balance",
-	"CHAWKBAZAR_ERROR.INVALID_CREDENTIALS": "Invalid Credentials",
-	"CHAWKBAZAR_ERROR.NOT_AUTHORIZED": "Not Authorized",
-	"CHAWKBAZAR_ERROR.NOT_FOUND": "The e-mail address is not assigned to any user account",
+	"CHAWKBAZAR_ERROR.ACTION_NOT_VALID": "Үйлдэл хүчингүй",
+	"CHAWKBAZAR_ERROR.EMPTY_MOBILE_NUMBER": "Гар утасны дугаараа оруулна уу",
+	"CHAWKBAZAR_ERROR.INSUFFICIENT_BALANCE": "Үлдэгдэл хангалтгүй",
+	"CHAWKBAZAR_ERROR.INVALID_CREDENTIALS": "Хэрэгэлэгчийн нэр эсвэл нууц үг буруу",
+	"CHAWKBAZAR_ERROR.NOT_AUTHORIZED": "Зөвшөөрөлгүй",
+	"CHAWKBAZAR_ERROR.NOT_FOUND": "Имэйл хаягийг ямар ч хэрэглэгчийн бүртгэлд өгөөгүй",
 	"CHAWKBAZAR_ERROR.OPERATION_NOT": "Operation Not",
 	"CHAWKBAZAR_ERROR.OTP_SEND_FAIL": "OTP sending failed",
 	"CHAWKBAZAR_ERROR.OTP_VERIFICATION_FAILED": "OTP Verification Failed",
@@ -33,21 +33,21 @@
 	"button-app-store": "App Store",
 	"button-cancel": "Цуцлах",
 	"button-chat-services": "Гишүүн үйлчилгээнүүдтэй чатлах",
-	"button-delete": "Delete",
-	"button-go-home": "Go Home",
-	"button-load-more": "Load More",
-	"button-men-exclusive": "#men exclusive",
-	"button-place-order": "Place Order",
+	"button-delete": "Устгах",
+	"button-go-home": "Нүүр хуудасруу буцах",
+	"button-load-more": "Илүү ачааллах",
+	"button-men-exclusive": "#эрэгтэйчүүд онцгой",
+	"button-place-order": "Захиалга өгөх",
 	"button-play-store": "Play Store",
-	"button-save": "Save",
-	"button-send-message": "Send Message",
-	"button-submit": "Submit",
-	"button-subscribe": "Subscribe",
-	"button-update": "Update",
-	"button-view": "view",
-	"button-view-collection": "View Collection",
-	"button-women-exclusive": "#women exclusive",
-	"collection-description-four": "From studio to street, our collection of technical, high-performance activeness is made",
+	"button-save": "Хадгалах",
+	"button-send-message": "Зурвас илгээх",
+	"button-submit": "Илгээх",
+	"button-subscribe": "Бүртгүүлэх",
+	"button-update": "Шинэчлэх",
+	"button-view": "Харах",
+	"button-view-collection": "Цуглуулга үзэх",
+	"button-women-exclusive": "#Эмэгтэйчүүд онцгой",
+	"collection-description-four": "Студиос гудамж хүртэл бидний цуглуулгыг техникийн, өндөр гүйцэтгэлтэй идэвхтэй хийдэг",
 	"collection-description-one": "Endlessly versatile new styles that say yes to spring. The season’s looking bright.",
 	"collection-description-three": "Endlessly versatile new styles that say yes to spring. The season’s looking bright.",
 	"collection-description-two": "Endlessly versatile new styles that say yes to spring. The season’s looking bright.",
