--- a/apps/storefront/public/locales/mn/footer.json
+++ b/apps/storefront/public/locales/mn/footer.json
@@ -4,14 +4,14 @@
 	"link-answer-center": "Answer center",
 	"link-contact-us": "Contact Us",
 	"link-copyright": "Copyright",
-	"link-customer-support": "Customer Support",
-	"link-discussion-boards": "Discussion boards",
+	"link-customer-support": "Хэрэглэгчийн дэмжлэг",
+	"link-discussion-boards": "Хэлэлцүүлгийн самбарууд",
 	"link-email": "yourexample@email.com",
 	"link-email-two": "example@email.com",
-	"link-exchanges": "Return & Exchanges",
+	"link-exchanges": "Буцах & Солилцоо",
 	"link-facebook": "Facebook",
-	"link-faq": "FAQ & Helps",
-	"link-giving-works": "Giving works",
+	"link-faq": "Түгээмэл асуулт, тусламж",
+	"link-giving-works": "Бүтээл өгөх",
 	"link-instagram": "Instagram",
 	"link-kids-wear": "Kid's Wear",
 	"link-men-wear": "Men's Wear",
