--- a/apps/storefront/public/locales/mn/menu.json
+++ b/apps/storefront/public/locales/mn/menu.json
@@ -5,8 +5,8 @@
 	"menu-belt-scarves": "Belt, Scarves & More",
 	"menu-blazers": "Blazers",
 	"menu-blazwers-coats": "Blazwers & Coats",
-	"menu-boots": "Boots",
-	"menu-bra": "Bra",
+	"menu-boots": "Гутал",
+	"menu-bra": "Хөхний даруулга",
 	"menu-briefs": "Briefs",
 	"menu-casual-shirts": "Casual Shirts",
 	"menu-casual-shoes": "Casual Shoes",
