--- a/apps/storefront/public/locales/mn/terms.json
+++ b/apps/storefront/public/locales/mn/terms.json
@@ -5,10 +5,10 @@
 	"terms-four-title": "Accessing your Personal Data",
 	"terms-one-content": "<p>Little &amp; Big is committed to protecting your privacy because we are committed to valuing people. Our Privacy Policy below sets out how your personal information is collected, used and protected. The&nbsp;<a href='http://demo'>Demo Country Privacy Principles</a>&nbsp;also apply to us.</p><p>This Privacy Policy describes our policies and procedures on the collection, holding, use and disclosure of your personal information and should be read together with our&nbsp;Terms and Conditions. By providing your personal information you consent to our collection, use and disclosure of that information in accordance with this Privacy Policy.</p>",
 	"terms-one-title": "Purpose",
-	"terms-six-content": "<p>The Commons<br>20-40 demo St,<br>Jon doe NSW 2008<br>Country<br><br>Email: demo@demo.com</p>",
-	"terms-six-title": "Owner and Data Controller",
+	"terms-six-content": "<p>The Commons<br>20-40 demo St,<br>Jon doe NSW 2008<br>Улс<br><br>Имэйл: demo@demo.com</p>",
+	"terms-six-title": "Өмчлөгч ба өгөгдөл хянагч",
 	"terms-three-content": "<p>Personal Data collected for the following purposes and using the following services:</p><ol><li>Google Analytics: Cookies; Usage Data</li><li>Contact form: email address; first name; phone number</li><li>Mailing list or newsletter: email address; first name</li></ol>",
-	"terms-three-title": "Personal Data Collected",
+	"terms-three-title": "Хувийн мэдээлэл цуглуулсан",
 	"terms-two-content": "<p>When used in this Policy, 'personal information' has the meaning given in the Privacy Act. Generally, it means any information or an opinion that could be used to identify you.</p>",
-	"terms-two-title": "What is Personal Data?"
+	"terms-two-title": "Хувийн мэдээлэл гэж юу вэ?"
 }
