--- a/apps/storefront/public/locales/mn/forms.json
+++ b/apps/storefront/public/locales/mn/forms.json
@@ -1,20 +1,20 @@
 {
-	"address-required": "Address is required",
-	"display-name-required": "Display name is required",
-	"email-error": "Please provide valid email address",
-	"email-required": "Email is required",
-	"error-code-required": "Please input the otp code",
-	"error-credential-wrong": "Invalid credentials",
-	"error-description-required": "Tell us more about it",
-	"error-email-format": "The provided email address format is not valid",
-	"error-email-required": "You must need to provide your email address",
-	"error-min-code": "Code must be at least 6 characters",
+	"address-required": "Хаяг оруулах шаардлагатай",
+	"display-name-required": "Дэлгэцийн нэр шаардлагатай",
+	"email-error": "Хүчинтэй имэйл хаяг оруулна уу",
+	"email-required": "Имэйл шаардлагатай",
+	"error-code-required": "otp кодыг оруулна уу",
+	"error-credential-wrong": "Хүчингүй итгэмжлэл",
+	"error-description-required": "Энэ талаар бидэнд дэлгэрэнгүй ярина уу",
+	"error-email-format": "Өгөгдсөн имэйл хаягийн формат буруу байна",
+	"error-email-required": "Та имэйл хаягаа оруулах шаардлагатай",
+	"error-min-code": "Код хамгийн багадаа 6 тэмдэгттэй байх ёстой",
 	"error-name-required": "Name is required",
 	"error-subject-required": "What subject do you want to discuss with us?",
-	"first-name-required": "First name is required",
-	"label-address": "Address",
-	"label-city": "City/Town",
-	"label-confirm-password-star": "Confirm Password*",
+	"first-name-required": "Нэрийг оруулах шаардлагатай",
+	"label-address": "Хаяг",
+	"label-city": "Хот/Хот",
+	"label-confirm-password-star": "Нууц үгээ баталгаажуулах*",
 	"label-country": "Country",
 	"label-display-name": "Display Name *",
 	"label-email": "Email",
